# frikkinwave-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE.md  DATAMODEL.md  Dockerfile  PROJECT.md  ROADMAP.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/bands/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/bands/migrations/: 0001_initial.py
apps/bands/tests/: conftest.py  test_band.py  test_membership.py
apps/connections/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/connections/migrations/: 0001_initial.py
apps/connections/tests/: test_contact.py  test_notifications.py
apps/engagements/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/engagements/migrations/: 0001_initial.py
apps/engagements/tests/: conftest.py  (+1 more)
apps/listings/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/musicians/: admin.py  apps.py  models.py  openai_client.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/reviews/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/social/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/users/: models.py  serializers.py  services.py  urls.py  views.py
apps/venues/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
config/: __init__.py  celery.py  urls.py
config/settings/: base.py  local.py  production.py
infra/: README.md
infra/dns/: dns.tf  main.tf  outputs.tf  variables.tf
infra/scripts/: bring-up.sh  push-image.sh  run-migrations.sh  teardown.sh
infra/terraform/: alb.tf  dns.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  logs.tf  main.tf  network.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf
requirements/: base.txt
tests/: test_celery_wiring.py
(+44 files in other folders)
